[gd_scene load_steps=3 format=3 uid="uid://2d52tcveghpy"]

[ext_resource type="Script" path="res://actor_builders/stats_list_control.gd" id="1_pb6eo"]
[ext_resource type="PackedScene" uid="uid://cfwgb2kcqpgc1" path="res://utility/label_shaker.tscn" id="2_13sdk"]

[node name="StatsListControl" type="PanelContainer"]
custom_minimum_size = Vector2(250, 0)
offset_right = 250.0
offset_bottom = 654.0
mouse_filter = 2
script = ExtResource("1_pb6eo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HeaderLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Stats"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
modulate = Color(0.4984, 0.63546, 0.89, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Stat"
horizontal_alignment = 1

[node name="StatTotalLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.4984, 0.63546, 0.89, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.18
text = "Stat Total"
horizontal_alignment = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(0.4984, 0.63546, 0.89, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Breakdown"
horizontal_alignment = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 3
columns = 3

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
visible = false
modulate = Color(0.4984, 0.63546, 0.89, 1)
layout_mode = 2
text = "Willpower"
horizontal_alignment = 2

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
visible = false
modulate = Color(0.4984, 0.63546, 0.89, 1)
layout_mode = 2
text = "20"

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
visible = false
modulate = Color(0.4984, 0.63546, 0.89, 1)
layout_mode = 2
text = "(10+10)"
horizontal_alignment = 2

[node name="MouseDetectors" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="WeightLabelShaker" parent="." instance=ExtResource("2_13sdk")]
